y.output
Rules never reduced

   51 N: /* empty */


State 202 conflicts: 1 reduce/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: M0 EXTDEFS

    2 M0: /* empty */

    3 EXTDEFS: EXTDEF M1 EXTDEFS
    4        | /* empty */

    5 M1: /* empty */

    6 EXTDEF: INTTYPE M369 EXTVARS SEMI
    7       | STSPEC M3 SEXTVARS SEMI
    8       | INTTYPE M369 FUNC M18 STMTBLOCK

    9 M18: /* empty */

   10 M369: /* empty */

   11 M3: /* empty */

   12 SEXTVARS: ID
   13         | ID COMMA M15 SEXTVARS
   14         | /* empty */

   15 M15: /* empty */

   16 EXTVARS: VAR
   17        | VAR ASSIGN M5 INIT
   18        | VAR COMMA M4 EXTVARS
   19        | VAR ASSIGN M5 INIT COMMA M8 EXTVARS
   20        | /* empty */

   21 M4: /* empty */

   22 M8: /* empty */

   23 M5: /* empty */

   24 STSPEC: STRUCT M9 ID M10 LC M111 SDEFS RC
   25       | STRUCT M11 LC M111 SDEFS RC
   26       | STRUCT M9 ID

   27 M9: /* empty */

   28 M10: /* empty */

   29 M111: /* empty */

   30 M11: /* empty */

   31 FUNC: ID LP M16 PARAS RP

   32 M16: /* empty */

   33 PARAS: INTTYPE ID COMMA M17 PARAS
   34      | INTTYPE ID
   35      | /* empty */

   36 M17: /* empty */

   37 STMTBLOCK: LC M19 DEFS M22 STMTS RC

   38 M19: /* empty */

   39 M22: /* empty */

   40 STMTS: STMT M41 STMTS
   41      | /* empty */

   42 M41: /* empty */

   43 STMT: EXP SEMI
   44     | STMTBLOCK
   45     | RETURN MF1 EXP SEMI
   46     | IF LP MF2 EXP RP M26 STMT N ELSE M27 STMT
   47     | IF LP MF2 EXP RP M26 STMT
   48     | FOR LP MF2 EXP SEMI M26 EXP SEMI M26 EXP M66 RP M26 STMT
   49     | CONT SEMI
   50     | BREAK SEMI

   51 N: /* empty */

   52 M66: /* empty */

   53 M26: /* empty */

   54 M27: /* empty */

   55 DEFS: INTTYPE M369 DECS SEMI M20 DEFS
   56     | STSPEC M21 SDECS SEMI M20 DEFS
   57     | /* empty */

   58 M20: /* empty */

   59 M21: /* empty */

   60 SDEFS: INTTYPE M12 SDECS SEMI M13 SDEFS
   61      | /* empty */

   62 M12: /* empty */

   63 M13: /* empty */

   64 SDECS: ID COMMA M14 SDECS
   65      | ID

   66 M14: /* empty */

   67 DECS: VAR
   68     | VAR COMMA M23 DECS
   69     | VAR ASSIGN M5 INIT COMMA M24 DECS
   70     | VAR ASSIGN M5 INIT

   71 M23: /* empty */

   72 M24: /* empty */

   73 VAR: ID
   74    | ELISTDEF RB

   75 ELISTDEF: ELISTDEF RB LB INT
   76         | ID LB INT

   77 INIT: EXP
   78     | LC M6 ARRARGS RC

   79 M6: /* empty */

   80 ARRARGS: EXP COMMA M7 ARRARGS
   81        | EXP

   82 M7: /* empty */

   83 EXP: EXPS
   84    | /* empty */

   85 MF1: /* empty */

   86 MF2: /* empty */

   87 MF3: /* empty */

   88 EXPS: SUB MF1 EXPS
   89     | EXPS PRODUCT MF2 EXPS
   90     | EXPS ADD MF2 EXPS
   91     | EXPS SUB MF2 EXPS
   92     | EXPS SHIFT MF2 EXPS
   93     | EXPS RELATION MF2 EXPS
   94     | EXPS AND MF2 EXPS
   95     | EXPS XOR MF2 EXPS
   96     | EXPS OR MF2 EXPS
   97     | EXPS LAND M31 EXPS
   98     | EXPS LOR M31 EXPS
   99     | LLL ASSIGN MF2 EXPS
  100     | UNARYOP MF1 EXPS
  101     | LP MF1 EXPS RP
  102     | ID LP M32 ARGS RP
  103     | LLL
  104     | INT

  105 LLL: ID
  106    | ALIST RB
  107    | ID DOT ID

  108 M31: /* empty */

  109 M32: /* empty */

  110 ALIST: ALIST RB LB MF3 EXP
  111      | ID LB MF2 EXP

  112 ARGS: EXP M33 COMMA MG3 ARGS
  113     | EXP M33

  114 MG3: /* empty */

  115 M33: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 75 76 104
INTTYPE (259) 6 8 33 34 55 60
ID (260) 12 13 24 26 31 33 34 64 65 73 76 102 105 107 111
SEMI (261) 6 7 43 45 48 49 50 55 56 60
COMMA (262) 13 18 19 33 64 68 69 80 112
LC (263) 24 25 37 78
RC (264) 24 25 37 78
IF (265) 46 47
FOR (266) 48
IFX (267)
STRUCT (268) 24 25 26
RETURN (269) 45
ELSE (270) 46
BREAK (271) 50
CONT (272) 49
LP (273) 31 46 47 48 101 102
RP (274) 31 46 47 48 101 102
LB (275) 75 76 110 111
RB (276) 74 75 106 110
ASSIGN (277) 17 19 69 70 99
LOR (278) 98
LAND (279) 97
OR (280) 96
XOR (281) 95
AND (282) 94
RELATION (283) 93
SHIFT (284) 92
SUB (285) 88 91
ADD (286) 90
PRODUCT (287) 89
UNARYOP (288) 100
DOT (289) 107


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
PROGRAM (36)
    on left: 1, on right: 0
M0 (37)
    on left: 2, on right: 1
EXTDEFS (38)
    on left: 3 4, on right: 1 3
M1 (39)
    on left: 5, on right: 3
EXTDEF (40)
    on left: 6 7 8, on right: 3
M18 (41)
    on left: 9, on right: 8
M369 (42)
    on left: 10, on right: 6 8 55
M3 (43)
    on left: 11, on right: 7
SEXTVARS (44)
    on left: 12 13 14, on right: 7 13
M15 (45)
    on left: 15, on right: 13
EXTVARS (46)
    on left: 16 17 18 19 20, on right: 6 18 19
M4 (47)
    on left: 21, on right: 18
M8 (48)
    on left: 22, on right: 19
M5 (49)
    on left: 23, on right: 17 19 69 70
STSPEC (50)
    on left: 24 25 26, on right: 7 56
M9 (51)
    on left: 27, on right: 24 26
M10 (52)
    on left: 28, on right: 24
M111 (53)
    on left: 29, on right: 24 25
M11 (54)
    on left: 30, on right: 25
FUNC (55)
    on left: 31, on right: 8
M16 (56)
    on left: 32, on right: 31
PARAS (57)
    on left: 33 34 35, on right: 31 33
M17 (58)
    on left: 36, on right: 33
STMTBLOCK (59)
    on left: 37, on right: 8 44
M19 (60)
    on left: 38, on right: 37
M22 (61)
    on left: 39, on right: 37
STMTS (62)
    on left: 40 41, on right: 37 40
M41 (63)
    on left: 42, on right: 40
STMT (64)
    on left: 43 44 45 46 47 48 49 50, on right: 40 46 47 48
N (65)
    on left: 51, on right: 46
M66 (66)
    on left: 52, on right: 48
M26 (67)
    on left: 53, on right: 46 47 48
M27 (68)
    on left: 54, on right: 46
DEFS (69)
    on left: 55 56 57, on right: 37 55 56
M20 (70)
    on left: 58, on right: 55 56
M21 (71)
    on left: 59, on right: 56
SDEFS (72)
    on left: 60 61, on right: 24 25 60
M12 (73)
    on left: 62, on right: 60
M13 (74)
    on left: 63, on right: 60
SDECS (75)
    on left: 64 65, on right: 56 60 64
M14 (76)
    on left: 66, on right: 64
DECS (77)
    on left: 67 68 69 70, on right: 55 68 69
M23 (78)
    on left: 71, on right: 68
M24 (79)
    on left: 72, on right: 69
VAR (80)
    on left: 73 74, on right: 16 17 18 19 67 68 69 70
ELISTDEF (81)
    on left: 75 76, on right: 74 75
INIT (82)
    on left: 77 78, on right: 17 19 69 70
M6 (83)
    on left: 79, on right: 78
ARRARGS (84)
    on left: 80 81, on right: 78 80
M7 (85)
    on left: 82, on right: 80
EXP (86)
    on left: 83 84, on right: 43 45 46 47 48 77 80 81 110 111 112 113
MF1 (87)
    on left: 85, on right: 45 88 100 101
MF2 (88)
    on left: 86, on right: 46 47 48 89 90 91 92 93 94 95 96 99 111
MF3 (89)
    on left: 87, on right: 110
EXPS (90)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
   , on right: 83 88 89 90 91 92 93 94 95 96 97 98 99 100 101
LLL (91)
    on left: 105 106 107, on right: 99 103
M31 (92)
    on left: 108, on right: 97 98
M32 (93)
    on left: 109, on right: 102
ALIST (94)
    on left: 110 111, on right: 106 110
ARGS (95)
    on left: 112 113, on right: 102 112
MG3 (96)
    on left: 114, on right: 112
M33 (97)
    on left: 115, on right: 112 113


state 0

    0 $accept: . PROGRAM $end

    $default  reduce using rule 2 (M0)

    PROGRAM  go to state 1
    M0       go to state 2


state 1

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 3


state 2

    1 PROGRAM: M0 . EXTDEFS

    INTTYPE  shift, and go to state 4
    STRUCT   shift, and go to state 5

    $default  reduce using rule 4 (EXTDEFS)

    EXTDEFS  go to state 6
    EXTDEF   go to state 7
    STSPEC   go to state 8


state 3

    0 $accept: PROGRAM $end .

    $default  accept


state 4

    6 EXTDEF: INTTYPE . M369 EXTVARS SEMI
    8       | INTTYPE . M369 FUNC M18 STMTBLOCK

    $default  reduce using rule 10 (M369)

    M369  go to state 9


state 5

   24 STSPEC: STRUCT . M9 ID M10 LC M111 SDEFS RC
   25       | STRUCT . M11 LC M111 SDEFS RC
   26       | STRUCT . M9 ID

    LC        reduce using rule 30 (M11)
    $default  reduce using rule 27 (M9)

    M9   go to state 10
    M11  go to state 11


state 6

    1 PROGRAM: M0 EXTDEFS .

    $default  reduce using rule 1 (PROGRAM)


state 7

    3 EXTDEFS: EXTDEF . M1 EXTDEFS

    $default  reduce using rule 5 (M1)

    M1  go to state 12


state 8

    7 EXTDEF: STSPEC . M3 SEXTVARS SEMI

    $default  reduce using rule 11 (M3)

    M3  go to state 13


state 9

    6 EXTDEF: INTTYPE M369 . EXTVARS SEMI
    8       | INTTYPE M369 . FUNC M18 STMTBLOCK

    ID  shift, and go to state 14

    $default  reduce using rule 20 (EXTVARS)

    EXTVARS   go to state 15
    FUNC      go to state 16
    VAR       go to state 17
    ELISTDEF  go to state 18


state 10

   24 STSPEC: STRUCT M9 . ID M10 LC M111 SDEFS RC
   26       | STRUCT M9 . ID

    ID  shift, and go to state 19


state 11

   25 STSPEC: STRUCT M11 . LC M111 SDEFS RC

    LC  shift, and go to state 20


state 12

    3 EXTDEFS: EXTDEF M1 . EXTDEFS

    INTTYPE  shift, and go to state 4
    STRUCT   shift, and go to state 5

    $default  reduce using rule 4 (EXTDEFS)

    EXTDEFS  go to state 21
    EXTDEF   go to state 7
    STSPEC   go to state 8


state 13

    7 EXTDEF: STSPEC M3 . SEXTVARS SEMI

    ID  shift, and go to state 22

    $default  reduce using rule 14 (SEXTVARS)

    SEXTVARS  go to state 23


state 14

   31 FUNC: ID . LP M16 PARAS RP
   73 VAR: ID .
   76 ELISTDEF: ID . LB INT

    LP  shift, and go to state 24
    LB  shift, and go to state 25

    $default  reduce using rule 73 (VAR)


state 15

    6 EXTDEF: INTTYPE M369 EXTVARS . SEMI

    SEMI  shift, and go to state 26


state 16

    8 EXTDEF: INTTYPE M369 FUNC . M18 STMTBLOCK

    $default  reduce using rule 9 (M18)

    M18  go to state 27


state 17

   16 EXTVARS: VAR .
   17        | VAR . ASSIGN M5 INIT
   18        | VAR . COMMA M4 EXTVARS
   19        | VAR . ASSIGN M5 INIT COMMA M8 EXTVARS

    COMMA   shift, and go to state 28
    ASSIGN  shift, and go to state 29

    $default  reduce using rule 16 (EXTVARS)


state 18

   74 VAR: ELISTDEF . RB
   75 ELISTDEF: ELISTDEF . RB LB INT

    RB  shift, and go to state 30


state 19

   24 STSPEC: STRUCT M9 ID . M10 LC M111 SDEFS RC
   26       | STRUCT M9 ID .

    LC        reduce using rule 28 (M10)
    $default  reduce using rule 26 (STSPEC)

    M10  go to state 31


state 20

   25 STSPEC: STRUCT M11 LC . M111 SDEFS RC

    $default  reduce using rule 29 (M111)

    M111  go to state 32


state 21

    3 EXTDEFS: EXTDEF M1 EXTDEFS .

    $default  reduce using rule 3 (EXTDEFS)


state 22

   12 SEXTVARS: ID .
   13         | ID . COMMA M15 SEXTVARS

    COMMA  shift, and go to state 33

    $default  reduce using rule 12 (SEXTVARS)


state 23

    7 EXTDEF: STSPEC M3 SEXTVARS . SEMI

    SEMI  shift, and go to state 34


state 24

   31 FUNC: ID LP . M16 PARAS RP

    $default  reduce using rule 32 (M16)

    M16  go to state 35


state 25

   76 ELISTDEF: ID LB . INT

    INT  shift, and go to state 36


state 26

    6 EXTDEF: INTTYPE M369 EXTVARS SEMI .

    $default  reduce using rule 6 (EXTDEF)


state 27

    8 EXTDEF: INTTYPE M369 FUNC M18 . STMTBLOCK

    LC  shift, and go to state 37

    STMTBLOCK  go to state 38


state 28

   18 EXTVARS: VAR COMMA . M4 EXTVARS

    $default  reduce using rule 21 (M4)

    M4  go to state 39


state 29

   17 EXTVARS: VAR ASSIGN . M5 INIT
   19        | VAR ASSIGN . M5 INIT COMMA M8 EXTVARS

    $default  reduce using rule 23 (M5)

    M5  go to state 40


state 30

   74 VAR: ELISTDEF RB .
   75 ELISTDEF: ELISTDEF RB . LB INT

    LB  shift, and go to state 41

    $default  reduce using rule 74 (VAR)


state 31

   24 STSPEC: STRUCT M9 ID M10 . LC M111 SDEFS RC

    LC  shift, and go to state 42


state 32

   25 STSPEC: STRUCT M11 LC M111 . SDEFS RC

    INTTYPE  shift, and go to state 43

    $default  reduce using rule 61 (SDEFS)

    SDEFS  go to state 44


state 33

   13 SEXTVARS: ID COMMA . M15 SEXTVARS

    $default  reduce using rule 15 (M15)

    M15  go to state 45


state 34

    7 EXTDEF: STSPEC M3 SEXTVARS SEMI .

    $default  reduce using rule 7 (EXTDEF)


state 35

   31 FUNC: ID LP M16 . PARAS RP

    INTTYPE  shift, and go to state 46

    $default  reduce using rule 35 (PARAS)

    PARAS  go to state 47


state 36

   76 ELISTDEF: ID LB INT .

    $default  reduce using rule 76 (ELISTDEF)


state 37

   37 STMTBLOCK: LC . M19 DEFS M22 STMTS RC

    $default  reduce using rule 38 (M19)

    M19  go to state 48


state 38

    8 EXTDEF: INTTYPE M369 FUNC M18 STMTBLOCK .

    $default  reduce using rule 8 (EXTDEF)


state 39

   18 EXTVARS: VAR COMMA M4 . EXTVARS

    ID  shift, and go to state 49

    $default  reduce using rule 20 (EXTVARS)

    EXTVARS   go to state 50
    VAR       go to state 17
    ELISTDEF  go to state 18


state 40

   17 EXTVARS: VAR ASSIGN M5 . INIT
   19        | VAR ASSIGN M5 . INIT COMMA M8 EXTVARS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LC       shift, and go to state 53
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    $default  reduce using rule 84 (EXP)

    INIT   go to state 57
    EXP    go to state 58
    EXPS   go to state 59
    LLL    go to state 60
    ALIST  go to state 61


state 41

   75 ELISTDEF: ELISTDEF RB LB . INT

    INT  shift, and go to state 62


state 42

   24 STSPEC: STRUCT M9 ID M10 LC . M111 SDEFS RC

    $default  reduce using rule 29 (M111)

    M111  go to state 63


state 43

   60 SDEFS: INTTYPE . M12 SDECS SEMI M13 SDEFS

    $default  reduce using rule 62 (M12)

    M12  go to state 64


state 44

   25 STSPEC: STRUCT M11 LC M111 SDEFS . RC

    RC  shift, and go to state 65


state 45

   13 SEXTVARS: ID COMMA M15 . SEXTVARS

    ID  shift, and go to state 22

    $default  reduce using rule 14 (SEXTVARS)

    SEXTVARS  go to state 66


state 46

   33 PARAS: INTTYPE . ID COMMA M17 PARAS
   34      | INTTYPE . ID

    ID  shift, and go to state 67


state 47

   31 FUNC: ID LP M16 PARAS . RP

    RP  shift, and go to state 68


state 48

   37 STMTBLOCK: LC M19 . DEFS M22 STMTS RC

    INTTYPE  shift, and go to state 69
    STRUCT   shift, and go to state 5

    $default  reduce using rule 57 (DEFS)

    STSPEC  go to state 70
    DEFS    go to state 71


state 49

   73 VAR: ID .
   76 ELISTDEF: ID . LB INT

    LB  shift, and go to state 25

    $default  reduce using rule 73 (VAR)


state 50

   18 EXTVARS: VAR COMMA M4 EXTVARS .

    $default  reduce using rule 18 (EXTVARS)


state 51

  104 EXPS: INT .

    $default  reduce using rule 104 (EXPS)


state 52

  102 EXPS: ID . LP M32 ARGS RP
  105 LLL: ID .
  107    | ID . DOT ID
  111 ALIST: ID . LB MF2 EXP

    LP   shift, and go to state 72
    LB   shift, and go to state 73
    DOT  shift, and go to state 74

    $default  reduce using rule 105 (LLL)


state 53

   78 INIT: LC . M6 ARRARGS RC

    $default  reduce using rule 79 (M6)

    M6  go to state 75


state 54

  101 EXPS: LP . MF1 EXPS RP

    $default  reduce using rule 85 (MF1)

    MF1  go to state 76


state 55

   88 EXPS: SUB . MF1 EXPS

    $default  reduce using rule 85 (MF1)

    MF1  go to state 77


state 56

  100 EXPS: UNARYOP . MF1 EXPS

    $default  reduce using rule 85 (MF1)

    MF1  go to state 78


state 57

   17 EXTVARS: VAR ASSIGN M5 INIT .
   19        | VAR ASSIGN M5 INIT . COMMA M8 EXTVARS

    COMMA  shift, and go to state 79

    $default  reduce using rule 17 (EXTVARS)


state 58

   77 INIT: EXP .

    $default  reduce using rule 77 (INIT)


state 59

   83 EXP: EXPS .
   89 EXPS: EXPS . PRODUCT MF2 EXPS
   90     | EXPS . ADD MF2 EXPS
   91     | EXPS . SUB MF2 EXPS
   92     | EXPS . SHIFT MF2 EXPS
   93     | EXPS . RELATION MF2 EXPS
   94     | EXPS . AND MF2 EXPS
   95     | EXPS . XOR MF2 EXPS
   96     | EXPS . OR MF2 EXPS
   97     | EXPS . LAND M31 EXPS
   98     | EXPS . LOR M31 EXPS

    LOR       shift, and go to state 80
    LAND      shift, and go to state 81
    OR        shift, and go to state 82
    XOR       shift, and go to state 83
    AND       shift, and go to state 84
    RELATION  shift, and go to state 85
    SHIFT     shift, and go to state 86
    SUB       shift, and go to state 87
    ADD       shift, and go to state 88
    PRODUCT   shift, and go to state 89

    $default  reduce using rule 83 (EXP)


state 60

   99 EXPS: LLL . ASSIGN MF2 EXPS
  103     | LLL .

    ASSIGN  shift, and go to state 90

    $default  reduce using rule 103 (EXPS)


state 61

  106 LLL: ALIST . RB
  110 ALIST: ALIST . RB LB MF3 EXP

    RB  shift, and go to state 91


state 62

   75 ELISTDEF: ELISTDEF RB LB INT .

    $default  reduce using rule 75 (ELISTDEF)


state 63

   24 STSPEC: STRUCT M9 ID M10 LC M111 . SDEFS RC

    INTTYPE  shift, and go to state 43

    $default  reduce using rule 61 (SDEFS)

    SDEFS  go to state 92


state 64

   60 SDEFS: INTTYPE M12 . SDECS SEMI M13 SDEFS

    ID  shift, and go to state 93

    SDECS  go to state 94


state 65

   25 STSPEC: STRUCT M11 LC M111 SDEFS RC .

    $default  reduce using rule 25 (STSPEC)


state 66

   13 SEXTVARS: ID COMMA M15 SEXTVARS .

    $default  reduce using rule 13 (SEXTVARS)


state 67

   33 PARAS: INTTYPE ID . COMMA M17 PARAS
   34      | INTTYPE ID .

    COMMA  shift, and go to state 95

    $default  reduce using rule 34 (PARAS)


state 68

   31 FUNC: ID LP M16 PARAS RP .

    $default  reduce using rule 31 (FUNC)


state 69

   55 DEFS: INTTYPE . M369 DECS SEMI M20 DEFS

    $default  reduce using rule 10 (M369)

    M369  go to state 96


state 70

   56 DEFS: STSPEC . M21 SDECS SEMI M20 DEFS

    $default  reduce using rule 59 (M21)

    M21  go to state 97


state 71

   37 STMTBLOCK: LC M19 DEFS . M22 STMTS RC

    $default  reduce using rule 39 (M22)

    M22  go to state 98


state 72

  102 EXPS: ID LP . M32 ARGS RP

    $default  reduce using rule 109 (M32)

    M32  go to state 99


state 73

  111 ALIST: ID LB . MF2 EXP

    $default  reduce using rule 86 (MF2)

    MF2  go to state 100


state 74

  107 LLL: ID DOT . ID

    ID  shift, and go to state 101


state 75

   78 INIT: LC M6 . ARRARGS RC

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    $default  reduce using rule 84 (EXP)

    ARRARGS  go to state 102
    EXP      go to state 103
    EXPS     go to state 59
    LLL      go to state 60
    ALIST    go to state 61


state 76

  101 EXPS: LP MF1 . EXPS RP

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 104
    LLL    go to state 60
    ALIST  go to state 61


state 77

   88 EXPS: SUB MF1 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 105
    LLL    go to state 60
    ALIST  go to state 61


state 78

  100 EXPS: UNARYOP MF1 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 106
    LLL    go to state 60
    ALIST  go to state 61


state 79

   19 EXTVARS: VAR ASSIGN M5 INIT COMMA . M8 EXTVARS

    $default  reduce using rule 22 (M8)

    M8  go to state 107


state 80

   98 EXPS: EXPS LOR . M31 EXPS

    $default  reduce using rule 108 (M31)

    M31  go to state 108


state 81

   97 EXPS: EXPS LAND . M31 EXPS

    $default  reduce using rule 108 (M31)

    M31  go to state 109


state 82

   96 EXPS: EXPS OR . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 110


state 83

   95 EXPS: EXPS XOR . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 111


state 84

   94 EXPS: EXPS AND . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 112


state 85

   93 EXPS: EXPS RELATION . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 113


state 86

   92 EXPS: EXPS SHIFT . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 114


state 87

   91 EXPS: EXPS SUB . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 115


state 88

   90 EXPS: EXPS ADD . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 116


state 89

   89 EXPS: EXPS PRODUCT . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 117


state 90

   99 EXPS: LLL ASSIGN . MF2 EXPS

    $default  reduce using rule 86 (MF2)

    MF2  go to state 118


state 91

  106 LLL: ALIST RB .
  110 ALIST: ALIST RB . LB MF3 EXP

    LB  shift, and go to state 119

    $default  reduce using rule 106 (LLL)


state 92

   24 STSPEC: STRUCT M9 ID M10 LC M111 SDEFS . RC

    RC  shift, and go to state 120


state 93

   64 SDECS: ID . COMMA M14 SDECS
   65      | ID .

    COMMA  shift, and go to state 121

    $default  reduce using rule 65 (SDECS)


state 94

   60 SDEFS: INTTYPE M12 SDECS . SEMI M13 SDEFS

    SEMI  shift, and go to state 122


state 95

   33 PARAS: INTTYPE ID COMMA . M17 PARAS

    $default  reduce using rule 36 (M17)

    M17  go to state 123


state 96

   55 DEFS: INTTYPE M369 . DECS SEMI M20 DEFS

    ID  shift, and go to state 49

    DECS      go to state 124
    VAR       go to state 125
    ELISTDEF  go to state 18


state 97

   56 DEFS: STSPEC M21 . SDECS SEMI M20 DEFS

    ID  shift, and go to state 93

    SDECS  go to state 126


state 98

   37 STMTBLOCK: LC M19 DEFS M22 . STMTS RC

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LC       shift, and go to state 37
    IF       shift, and go to state 127
    FOR      shift, and go to state 128
    RETURN   shift, and go to state 129
    BREAK    shift, and go to state 130
    CONT     shift, and go to state 131
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    SEMI      reduce using rule 84 (EXP)
    $default  reduce using rule 41 (STMTS)

    STMTBLOCK  go to state 132
    STMTS      go to state 133
    STMT       go to state 134
    EXP        go to state 135
    EXPS       go to state 59
    LLL        go to state 60
    ALIST      go to state 61


state 99

  102 EXPS: ID LP M32 . ARGS RP

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    $default  reduce using rule 84 (EXP)

    EXP    go to state 136
    EXPS   go to state 59
    LLL    go to state 60
    ALIST  go to state 61
    ARGS   go to state 137


state 100

  111 ALIST: ID LB MF2 . EXP

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    $default  reduce using rule 84 (EXP)

    EXP    go to state 138
    EXPS   go to state 59
    LLL    go to state 60
    ALIST  go to state 61


state 101

  107 LLL: ID DOT ID .

    $default  reduce using rule 107 (LLL)


state 102

   78 INIT: LC M6 ARRARGS . RC

    RC  shift, and go to state 139


state 103

   80 ARRARGS: EXP . COMMA M7 ARRARGS
   81        | EXP .

    COMMA  shift, and go to state 140

    $default  reduce using rule 81 (ARRARGS)


state 104

   89 EXPS: EXPS . PRODUCT MF2 EXPS
   90     | EXPS . ADD MF2 EXPS
   91     | EXPS . SUB MF2 EXPS
   92     | EXPS . SHIFT MF2 EXPS
   93     | EXPS . RELATION MF2 EXPS
   94     | EXPS . AND MF2 EXPS
   95     | EXPS . XOR MF2 EXPS
   96     | EXPS . OR MF2 EXPS
   97     | EXPS . LAND M31 EXPS
   98     | EXPS . LOR M31 EXPS
  101     | LP MF1 EXPS . RP

    RP        shift, and go to state 141
    LOR       shift, and go to state 80
    LAND      shift, and go to state 81
    OR        shift, and go to state 82
    XOR       shift, and go to state 83
    AND       shift, and go to state 84
    RELATION  shift, and go to state 85
    SHIFT     shift, and go to state 86
    SUB       shift, and go to state 87
    ADD       shift, and go to state 88
    PRODUCT   shift, and go to state 89


state 105

   88 EXPS: SUB MF1 EXPS .
   89     | EXPS . PRODUCT MF2 EXPS
   90     | EXPS . ADD MF2 EXPS
   91     | EXPS . SUB MF2 EXPS
   92     | EXPS . SHIFT MF2 EXPS
   93     | EXPS . RELATION MF2 EXPS
   94     | EXPS . AND MF2 EXPS
   95     | EXPS . XOR MF2 EXPS
   96     | EXPS . OR MF2 EXPS
   97     | EXPS . LAND M31 EXPS
   98     | EXPS . LOR M31 EXPS

    $default  reduce using rule 88 (EXPS)


state 106

   89 EXPS: EXPS . PRODUCT MF2 EXPS
   90     | EXPS . ADD MF2 EXPS
   91     | EXPS . SUB MF2 EXPS
   92     | EXPS . SHIFT MF2 EXPS
   93     | EXPS . RELATION MF2 EXPS
   94     | EXPS . AND MF2 EXPS
   95     | EXPS . XOR MF2 EXPS
   96     | EXPS . OR MF2 EXPS
   97     | EXPS . LAND M31 EXPS
   98     | EXPS . LOR M31 EXPS
  100     | UNARYOP MF1 EXPS .

    $default  reduce using rule 100 (EXPS)


state 107

   19 EXTVARS: VAR ASSIGN M5 INIT COMMA M8 . EXTVARS

    ID  shift, and go to state 49

    $default  reduce using rule 20 (EXTVARS)

    EXTVARS   go to state 142
    VAR       go to state 17
    ELISTDEF  go to state 18


state 108

   98 EXPS: EXPS LOR M31 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 143
    LLL    go to state 60
    ALIST  go to state 61


state 109

   97 EXPS: EXPS LAND M31 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 144
    LLL    go to state 60
    ALIST  go to state 61


state 110

   96 EXPS: EXPS OR MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 145
    LLL    go to state 60
    ALIST  go to state 61


state 111

   95 EXPS: EXPS XOR MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 146
    LLL    go to state 60
    ALIST  go to state 61


state 112

   94 EXPS: EXPS AND MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 147
    LLL    go to state 60
    ALIST  go to state 61


state 113

   93 EXPS: EXPS RELATION MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 148
    LLL    go to state 60
    ALIST  go to state 61


state 114

   92 EXPS: EXPS SHIFT MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 149
    LLL    go to state 60
    ALIST  go to state 61


state 115

   91 EXPS: EXPS SUB MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 150
    LLL    go to state 60
    ALIST  go to state 61


state 116

   90 EXPS: EXPS ADD MF2 . EXPS

    INT      shift, and go to state 51
    ID       shift, and go to state 52
    LP       shift, and go to state 54
    SUB      shift, and go to state 55
    UNARYOP  shift, and go to state 56

    EXPS   go to state 151
    LLL    go to state 60
    ALIST  go to state 61


state 117

   89 EXPS: EXPS PRODUCT MF2 . EXPS
